jenkins/jenkins-Slave/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: jenkins2
   labels:
     name: jenkins2
