jenkins/jenkins-Slave/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins2
  namespace: jenkins2
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: jenkins.psit.xxxxxxxx.net
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins2
          servicePort: web
